# python-multiuserfilelock

./: .gitattributes  .gitignore  .travis.yml  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: test.yml
multiuserfilelock/: __init__.py  _version.py
multiuserfilelock/tests/: test_acquire.py
