[metadata]
license_file = LICENSE

[versioneer]
VCS = git
style = pep440
versionfile_source = multiuserfilelock/_version.py
versionfile_build = multiuserfilelock/_version.py
tag_prefix =
parentdir_prefix = multiuserfilelock

[flake8]
exclude =
    versioneer.py
    multiuserfilelock/_version.py
    .tox
